Fixed container overflow

--- a/client/src/styles/Sidebar.module.css
+++ b/client/src/styles/Sidebar.module.css
@@ -3,7 +3,7 @@
 }
 
 .treeRoot {
-  height: 100%;
+  /* height: 100%; */
 }
 
 .draggingSource {
