--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -10,7 +10,7 @@ html {
 body {
   position: relative;
   height: 100%;
-  min-height: 100%;
+  min-height: 100svh;
 }
 header,
 footer {
@@ -38,22 +38,21 @@ header {
   background-color: rgb(2, 44, 159);
 }
 main {
-  padding: 1rem;
   background-color: hsl(0, 26%, 4%);
-  height: 100%;
+  height: calc(100% - 24px);
   color: antiquewhite;
 }
 .container {
   display: flex;
   flex-direction: row;
-  height: 100%;
 }
 .tree-nav {
+  position: sticky;
+  top: 0px;
   width: 260px;
   height: 100%;
   color: antiquewhite;
   background-color: hsl(310, 100%, 13%);
-  margin-bottom: 86px;
 }
 
 .chatbox-container {
@@ -66,7 +65,8 @@ main {
 }
 .chatbox-conversation {
   height: 100%;
-  margin-bottom: 86px;
+  margin-bottom: 100px;
+  overflow-y: auto;
 }
 .chatbox-response {
   padding: 0.5rem;
